<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.3.3.RELEASE</version>
	</parent>

	<groupId>com.opnitech.esb</groupId>
	<artifactId>ez-esb</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>ez-esb</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.7</java.version>

		<!-- Spring -->
		<spring-boot.version>1.3.3.RELEASE</spring-boot.version>
		<spring.version>4.2.4.RELEASE</spring.version>
		<spring.amqp.version>1.4.4.RELEASE</spring.amqp.version>
		<spring.spring-data-elasticsearch.version>2.0.1.RELEASE</spring.spring-data-elasticsearch.version>

		<!-- RabbitMQ -->
		<amqp-client.version>3.4.3</amqp-client.version>

		<!-- JAXB -->
		<jaxb2-maven-plugin.version>2.1</jaxb2-maven-plugin.version>

		<!-- H2 -->
		<h2.version>1.4.187</h2.version>

		<!-- Apache commons -->
		<commons-lang3.version>3.4</commons-lang3.version>
		<commons-collections.version>3.2.2</commons-collections.version>

		<!-- Plugins -->
		<jaxb2-maven-plugin.version>1.5</jaxb2-maven-plugin.version>

		<!-- Plugins -->
		<org.jvnet.jaxb2_commons.version>0.6.3</org.jvnet.jaxb2_commons.version>

		<!-- EL -->
		<el-api.version>6.0.36</el-api.version>

		<!-- Mockito -->
		<mockito.version>1.9.5</mockito.version>

		<!-- elasticsearch -->
		<elasticsearch.version>1.7.3</elasticsearch.version>

		<!-- YML -->
		<snakeyaml.version>1.17</snakeyaml.version>

		<!-- Camel -->
		<camel-spring-boot.version>2.17.0</camel-spring-boot.version>
		<camel-rabbitmq.version>2.17.0</camel-rabbitmq.version>
		<camel-jackson.version>2.17.0</camel-jackson.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Spring Boot -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-jpa</artifactId>
				<version>${spring-boot.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>tomcat-jdbc</artifactId>
						<groupId>org.apache.tomcat</groupId>
					</exclusion>
					<exclusion>
						<artifactId>tomcat-jdbc</artifactId>
						<groupId>org.apache.tomcat</groupId>
					</exclusion>
					<exclusion>
						<artifactId>ch.qos.logback</artifactId>
						<groupId>logback-classic</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-logging</artifactId>
				<version>${spring-boot.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>ch.qos.logback</artifactId>
						<groupId>logback-classic</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-rest</artifactId>
				<version>${spring-boot.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>ch.qos.logback</artifactId>
						<groupId>logback-classic</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-tomcat</artifactId>
				<version>${spring-boot.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>${spring-boot.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Spring -->
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-elasticsearch</artifactId>
				<version>${spring.spring-data-elasticsearch.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.elasticsearch</groupId>
						<artifactId>elasticsearch</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.elasticsearch</groupId>
				<artifactId>elasticsearch</artifactId>
				<version>${elasticsearch.version}</version>
			</dependency>

			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Apache commons -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${commons-collections.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>el-api</artifactId>
				<version>${el-api.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Spring -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.amqp</groupId>
				<artifactId>spring-amqp</artifactId>
				<version>${spring.amqp.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.amqp</groupId>
				<artifactId>spring-rabbit</artifactId>
				<version>${spring.amqp.version}</version>
				<exclusions>
					<exclusion>
						<groupId>com.rabbitmq</groupId>
						<artifactId>amqp-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- RabbitMQ -->
			<dependency>
				<groupId>com.rabbitmq</groupId>
				<artifactId>amqp-client</artifactId>
				<version>${amqp-client.version}</version>
			</dependency>

			<!-- YML -->
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>

			<!-- Camel -->
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-spring-boot</artifactId>
				<version>${camel-spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-spring-boot-starter</artifactId>
				<version>${camel-spring-boot.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-rabbitmq</artifactId>
				<version>${camel-rabbitmq.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-jackson</artifactId>
				<version>${camel-jackson.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>el-api</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>jaxb2-maven-plugin</artifactId>
					<version>${jaxb2-maven-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
					<artifactId>maven-java-formatter-plugin</artifactId>
					<version>0.4</version>
					<configuration>
						<compilerSource>${java.version}</compilerSource>
						<compilerCompliance>${java.version}</compilerCompliance>
						<compilerTargetPlatform>${java.version}</compilerTargetPlatform>
						<configFile>${formatter.config.file}</configFile>
						<includes>
							<include>com/dealer/**</include>
						</includes>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
				<artifactId>maven-java-formatter-plugin</artifactId>
			</plugin>
		</plugins>

	</build>

	<modules>
		<module>ez-esb-app</module>
	</modules>
</project>
